Fix content overflowing code blocks (#419)
* Set overflow: auto to <pre>

* Remove unused stylesheets

--- a/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
@@ -13,6 +13,10 @@
 	}
 }
 
+pre {
+	overflow: auto;
+}
+
 .entry-content {
 	// Parsed handbook content doesn't use image blocks, so large images are
 	// missing the max-width and break out of the page container.
